Add hypermedia (HATEOAS) to every endpoint
With these changes the level 3 of the Richardson Maturity Model is
reached, following the JSON:API specification.

A dedicated schema and link builder has been created to avoid
duplication regarding those links.

From now on, every endpoint uses a dedicated serializer that will
include expected links in the response.

A custom configuration has been defined for default URL host.

References:

* https://jsonapi.org/format/#document-links
* https://datatracker.ietf.org/doc/html/rfc8288
* https://martinfowler.com/articles/richardsonMaturityModel.html
* https://github.com/jsonapi-serializer/jsonapi-serializer?tab=readme-ov-file#links-per-object
* https://github.com/jsonapi-serializer/jsonapi-serializer/issues/157
* https://guides.rubyonrails.org/v7.1/configuring.html#custom-configuration
* https://thoughtbot.com/blog/writing-a-hypermedia-api-client-in-ruby
