# api/v1/swagger.yaml
@@ -35,7 +35,7 @@ paths:
           content:
             application/vnd.api+json:
               schema:
-                "$ref": "#/components/schemas/new_safebox_item"
+                "$ref": "#/components/schemas/safebox_item"
         '401':
           description: Invalid token provided to retrieve safebox items
           headers:
@@ -377,10 +377,24 @@ components:
                   example: Secure safebox 01
               required:
               - name
+            links:
+              type: object
+              properties:
+                self:
+                  "$ref": "#/components/schemas/create_safebox_link"
+                open:
+                  "$ref": "#/components/schemas/open_safebox_link"
+                getItems:
+                  "$ref": "#/components/schemas/list_safebox_items_link"
+                addItem:
+                  "$ref": "#/components/schemas/add_safebox_item_link"
+              required:
+              - self
           required:
           - id
           - type
           - attributes
+          - links
       required:
       - data
     safebox_token:
@@ -395,62 +409,21 @@ components:
             type:
               type: string
               example: safeboxToken
+            links:
+              type: object
+              properties:
+                self:
+                  "$ref": "#/components/schemas/open_safebox_link"
+                getItems:
+                  "$ref": "#/components/schemas/list_safebox_items_link"
+                addItem:
+                  "$ref": "#/components/schemas/add_safebox_item_link"
+              required:
+              - self
           required:
           - id
           - type
-      required:
-      - data
-    safebox_items:
-      type: object
-      properties:
-        data:
-          type: array
-          items:
-            type: object
-            properties:
-              id:
-                type: string
-                format: uuid
-                example: f626c808-648c-41fe-865d-c6062f3e0899
-              type:
-                type: string
-                example: safeboxItem
-              attributes:
-                type: object
-                properties:
-                  name:
-                    type: string
-                    example: Safebox content 01
-                required:
-                - name
-              relationships:
-                type: object
-                properties:
-                  safebox:
-                    type: object
-                    properties:
-                      data:
-                        type: object
-                        properties:
-                          id:
-                            type: string
-                            format: uuid
-                            example: f1e0ca7c-4972-4383-a538-cd6ad52aa08f
-                          type:
-                            type: string
-                            example: safebox
-                        required:
-                        - id
-                        - type
-                    required:
-                    - data
-                required:
-                - safebox
-            required:
-            - id
-            - type
-            - attributes
-            - relationships
+          - links
       required:
       - data
     new_safebox_item:
@@ -506,6 +479,131 @@ components:
           - relationships
       required:
       - data
+    safebox_item:
+      type: object
+      properties:
+        data:
+          type: object
+          properties:
+            id:
+              type: string
+              format: uuid
+              example: f626c808-648c-41fe-865d-c6062f3e0899
+            type:
+              type: string
+              example: safeboxItem
+            attributes:
+              type: object
+              properties:
+                name:
+                  type: string
+                  example: Item 01
+              required:
+              - name
+            relationships:
+              type: object
+              properties:
+                safebox:
+                  type: object
+                  properties:
+                    data:
+                      type: object
+                      properties:
+                        id:
+                          type: string
+                          format: uuid
+                          example: f1e0ca7c-4972-4383-a538-cd6ad52aa08f
+                          pattern: "^[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}$"
+                        type:
+                          type: string
+                          example: safebox
+                      required:
+                      - id
+                      - type
+                  required:
+                  - data
+              required:
+              - safebox
+            links:
+              type: object
+              properties:
+                self:
+                  "$ref": "#/components/schemas/add_safebox_item_link"
+                getItems:
+                  "$ref": "#/components/schemas/list_safebox_items_link"
+              required:
+              - self
+          required:
+          - id
+          - type
+          - attributes
+          - relationships
+          - links
+      required:
+      - data
+    safebox_items:
+      type: object
+      properties:
+        data:
+          type: array
+          items:
+            type: object
+            properties:
+              id:
+                type: string
+                format: uuid
+                example: f626c808-648c-41fe-865d-c6062f3e0899
+              type:
+                type: string
+                example: safeboxItem
+              attributes:
+                type: object
+                properties:
+                  name:
+                    type: string
+                    example: Safebox content 01
+                required:
+                - name
+              relationships:
+                type: object
+                properties:
+                  safebox:
+                    type: object
+                    properties:
+                      data:
+                        type: object
+                        properties:
+                          id:
+                            type: string
+                            format: uuid
+                            example: f1e0ca7c-4972-4383-a538-cd6ad52aa08f
+                          type:
+                            type: string
+                            example: safebox
+                        required:
+                        - id
+                        - type
+                    required:
+                    - data
+                required:
+                - safebox
+            required:
+            - id
+            - type
+            - attributes
+            - relationships
+        links:
+          type: object
+          properties:
+            self:
+              "$ref": "#/components/schemas/list_safebox_items_link"
+            addItem:
+              "$ref": "#/components/schemas/add_safebox_item_link"
+          required:
+          - self
+      required:
+      - data
+      - links
     api_error:
       type: object
       properties:
@@ -545,6 +643,82 @@ components:
                 type: object
             required:
             - title
+    create_safebox_link:
+      type: object
+      properties:
+        href:
+          type: string
+          example: https://www.example.com
+        title:
+          type: string
+          example: Create a new safebox
+        meta:
+          type: object
+          properties:
+            method:
+              type: string
+              example: post
+          required:
+          - method
+      required:
+      - href
+    open_safebox_link:
+      type: object
+      properties:
+        href:
+          type: string
+          example: https://www.example.com
+        title:
+          type: string
+          example: Open a safebox
+        meta:
+          type: object
+          properties:
+            method:
+              type: string
+              example: post
+          required:
+          - method
+      required:
+      - href
+    list_safebox_items_link:
+      type: object
+      properties:
+        href:
+          type: string
+          example: https://www.example.com
+        title:
+          type: string
+          example: Get all items from a safebox
+        meta:
+          type: object
+          properties:
+            method:
+              type: string
+              example: get
+          required:
+          - method
+      required:
+      - href
+    add_safebox_item_link:
+      type: object
+      properties:
+        href:
+          type: string
+          example: https://www.example.com
+        title:
+          type: string
+          example: Add item to a safebox
+        meta:
+          type: object
+          properties:
+            method:
+              type: string
+              example: post
+          required:
+          - method
+      required:
+      - href
 servers:
 - url: https://{defaultHost}
   variables:
