# contexts/safeboxes/safeboxes/infrastructure/links/list_safebox_items_collection_links.rb
@@ -1,0 +1,18 @@
+# frozen_string_literal: true
+
+module Safeboxes
+  module Safeboxes
+    module Infrastructure
+      module Links
+        class ListSafeboxItemsCollectionLinks < Shared::Infrastructure::LinkSerializer
+          def self.build(safebox_id)
+            {
+              "self" => ListSafeboxItemsLink.build(safebox_id),
+              "addItem" => AddSafeboxItemLink.build(safebox_id)
+            }
+          end
+        end
+      end
+    end
+  end
+end
