# contexts/safeboxes/safeboxes/infrastructure/safebox_item_collection_serializer.rb
@@ -3,10 +3,12 @@
 module Safeboxes
   module Safeboxes
     module Infrastructure
-      class SafeboxItemSerializer < Shared::Infrastructure::Serializer
+      class SafeboxItemCollectionSerializer < Shared::Infrastructure::Serializer
         set_id :id do |safebox_item|
           safebox_item.id.value
         end
+
+        set_type :safeboxItem
 
         attribute :name do |safebox_item|
           safebox_item.name.value
@@ -14,14 +16,6 @@ module Safeboxes
 
         # NOTE: Uses a workaround defined in the entity to make this work properly
         belongs_to :safebox, serializer: SafeboxSerializer, id_method_name: :safebox_relationship_id
-
-        link :self do |_safebox_token, params|
-          Links::AddSafeboxItemLink.build(params[:safebox_id])
-        end
-
-        link :getItems do |_safebox_token, params|
-          Links::ListSafeboxItemsLink.build(params[:safebox_id])
-        end
       end
     end
   end
