# contexts/safeboxes/safeboxes/infrastructure/safebox_serializer.rb
@@ -11,6 +11,22 @@ module Safeboxes
         attribute :name do |safebox|
           safebox.name.value
         end
+
+        link :self do
+          Links::CreateSafeboxLink.build
+        end
+
+        link :open do |safebox|
+          Links::OpenSafeboxLink.build(safebox.id.value)
+        end
+
+        link :getItems do |safebox|
+          Links::ListSafeboxItemsLink.build(safebox.id.value)
+        end
+
+        link :addItem do |safebox|
+          Links::AddSafeboxItemLink.build(safebox.id.value)
+        end
       end
     end
   end
